--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 beautifulsoup4==4.12.3
 bs4==0.0.2
 EbookLib==0.18
+iniconfig==2.0.0
 lxml==5.2.2
+packaging==24.1
+pluggy==1.5.0
+pytest==8.2.2
+pytest-mock==3.14.0
 six==1.16.0
 soupsieve==2.5
